# C-Subset-Compiler

./: CMakeLists.txt  ClassDiagram.cd  ClassDiagram.emf  Code.sln  Code.vcxproj  Code.vcxproj.filters  LICENSE  README.md  element.cpp  element.h  error.h  instruction.h  main.cpp  object.h  opcode.h  parser.cpp  parser.h  pi.txt  token.cpp  token.h  token_code.h  tokenizer.cpp  tokenizer.h  type_code.h  util.h  vm.cpp  vm.h
.github/workflows/: cmake.yml  msbuild.yml
x64/release/: testfile.txt
